Changes for 1.9

 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3

 - [ZBX-2406] removed filter from plaintext history (Aly)
 - [ZBX-2263] fixed permission checks in bar reports (Aly)
 - [ZBX-2270] fixed item filtering (Aly)
 - [ZBX-2401] fixed host name in dynamic graphs in screens (Aly)
 - [ZBXNEXT-325] added StartDBSyncers parameter for parallel writing to DB (Sasha)
 - [ZBX-1906] fixed possibility to add identical checks for discovery (Vedmak)
 - [ZBX-2384] fixed status of triggers elements in screens (Aly)
 - [ZBX-1824] fixed parsing map labels containing item references with user macros (Vedmak)
 - [ZBXNEXT-321] decreased number of select's from DB while processing trends data (Sasha)
 - [ZBX-1505] fixed user macros not resolved in frontend (Vedmak)
 - [ZBX-1902] fixed some possibilities to create incorrect linkage (Vedmak)
 - [ZBX-2386] rows per page limit increased (Vedmak)
 - [ZBX-2306] fixed zoom position (Aly)
 - [ZBX-2306] improved starting zoom on edges (Aly)
 - [ZBX-2132] added date format constants to locales, changed zbx_date2str function to meet regional formats and date translation
 - [ZBXNEXT-311] improved speedup dbconfig synchronization (Sasha)
 - [ZBX-2378] renamed calculated item field 'Expression' to 'Formula', changed trigger option 'Multiple TRUE events' to use 'PROBLEM' instead (Richlv)
 - [ZBX-2360] added multiple acknowledging for OK>UNKNOWN>OK and PROBLEM>UNKNOWN>PROBLEM events (Vedmak,Sasha)
 - [ZBX-2374] updated Ukrainian translation; thanks to zalex_ua (Richlv)
 - [ZBX-2347] fixed last 20 issues in event details showing less than 20 issues (Vedmak)
 - [DEV-459] made improvements in discovery page generation (Aly)
 - [ZBX-2148] added preview button in graphs form (Aly)